tests/instantiating/range_prop_odd_len/stderr.golden
error: length of 'range' property value list must be even, current length 3
bus.fbd +2:20
   |
 2 | 	C config; range = [0, 5, 9]
   | 	                  ^^^^^^^^^
